# forecast-rta

./: .gitignore  ANTIGRAVITY.md  GEMINI.md  README.md  docker-compose.yml
.specify/memory/: constitution.md  project_log.md  stories.md
.specify/templates/: plan-template.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 161031be4b2a_create_auth_tables.py  debbfea969ff_add_details_to_audit_logs.py  e0faaded3e73_create_products_table.py
backend/src/: api_router.py  main.py
backend/src/auth/application/: audit_service.py  register_user.py
backend/src/auth/domain/: models.py  roles.py
backend/src/auth/infrastructure/api/: dependencies.py  errors.py  routes.py  schemas.py
backend/src/auth/infrastructure/db/: models.py  models_audit.py  repository.py  repository_audit.py  seeding.py  session.py
backend/src/auth/infrastructure/security/: hasher.py  jwt_handler.py
backend/src/auth/infrastructure/services/: email_dispatcher.py
backend/src/catalog/domain/: models.py
backend/src/catalog/infrastructure/api/: routes.py  schemas.py
backend/tests/: conftest.py
backend/tests/auth/integration/: test_audit.py  test_login_api.py  test_modify_user.py  test_password_reset.py  test_rbac.py  test_registration.py
backend/tests/auth/unit/: test_roles.py  test_security.py  test_user_domain.py
backend/tests/catalog/: test_register_product.py
docs/: prd.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+69 files in other folders)
